<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/collapsedAppBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/expandedAppBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbarDetail">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_500"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_movies_a_star_is_born"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                tools:title="@string/app_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:src="@drawable/ic_baseline_date_range_24"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivRelease"
                app:layout_constraintStart_toEndOf="@+id/ivRelease"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="08 Jan 2017" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:src="@drawable/ic_baseline_video_label_24"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivRelease" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivGenre"
                app:layout_constraintEnd_toStartOf="@+id/gDetail"
                app:layout_constraintStart_toEndOf="@+id/ivGenre"
                app:layout_constraintTop_toBottomOf="@id/tvRelease"
                tools:text="Drama, Romance, Music" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:src="@drawable/ic_baseline_av_timer_24"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/gDetail"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7.5/10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivRating"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2h 16m" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:src="@drawable/ic_baseline_stars_24"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/gDetail"
                app:layout_constraintTop_toBottomOf="@id/tvRelease" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivRating"
                app:layout_constraintStart_toEndOf="@+id/ivRating"
                app:layout_constraintTop_toBottomOf="@id/tvRelease"
                tools:text="7.5/10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/detail_overview_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGenre" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverviewTitle"
                tools:text="Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons." />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview"
                tools:listitem="@layout/item_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_star_border_24"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>