<resources>
    <string name="app_name">Home Cinema</string>

    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">Tv Shows</string>

    <string name="menu_share">Share</string>
    <string name="menu_bookmark">Bookmark</string>

    <string name="share_message_title">Let\'s share this apps to your friends!</string>
    <string name="share_message_description">Know more info about Movies &amp; Tv Shows at <b>Home Cinema</b> in Google Play Store</string>

    <string name="detail_overview_title">Overview</string>
    <string name="detail_bookmark_added">Bookmark added!</string>
    <string name="detail_bookmark_added_view">View</string>
    <string name="detail_bookmark_removed">Bookmark removed!</string>

    <string name="error_button">Try again</string>

    <string-array name="bookmark_tab_title">
        <item>Movie</item>
        <item>Tv Show</item>
    </string-array>

    <string name="bookmark_confirmation_delete_movie_title">Delete Bookmarked Movie?</string>
    <string name="bookmark_confirmation_delete_tv_show_title">Delete Bookmarked Tv Show?</string>
    <string name="bookmark_confirmation_delete_description">Can\'t be retrieved once deleted</string>
    <string name="bookmark_confirmation_negative_button">Cancel</string>
    <string name="bookmark_confirmation_positive_button">Delete</string>
    <string name="bookmark_deleted">Bookmark deleted!</string>
    <string name="bookmark_deleted_undo">Undo</string>
    <string name="bookmark_deleted_undo_success">Undo success!</string>

    <string name="menu_sort_title">Title</string>
    <string name="menu_sort_rating">Rating</string>
</resources>