...
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_navigation_movies_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_movies_to_bookmarkActivity"
            app:destination="@id/bookmarkActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tv_shows"
        android:name="com.franzandel.dicodingjetpackprosubmission.ui.tvshows.presentation.fragment.TvShowsFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_tv_shows">
        <action
            android:id="@+id/action_navigation_tv_shows_to_detailFragment"
            app:destination="@id/detailFragment" />
...
